# BeatBolt

./: README.md  flake.nix  package-lock.json  package.json
src/: App.css  App.scss  App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Form.tsx  Nav.tsx  Progress.tsx  Queue.tsx
src/types/: main.tsx
