[package]
name = "beatbolt"
version = "0.0.1"
description = "An app to download with yt-dlp or spotdl"
authors = ["Yves Straten"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "path-all", "dialog-all", "notification-all", "shell-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
